--- a/styles/SocialMenu.module.scss
+++ b/styles/SocialMenu.module.scss
@@ -13,11 +13,7 @@ $width: 40px;
   max-width: 500px;
   width: 100%;
   height: 100%;
-
-  @media screen and (max-width: 400px) {
-    display: flex;
-    grid-gap: 0;
-  }
+  min-width: 500px;
 }
 
 .social_iconContainer {
