--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -1,9 +1,4 @@
-$light: #f7f7f7;
-$dark: rgb(59, 59, 59);
 $gray: #5c5c5c;
-$light-gray: #c4c4c4;
-$primary-blue: #64a7f5;
-$primary-red: #fe7272;
 $dark-blue: #093474;
 $yellow: #ffd506;
 $lightblue: #42a4be;
