--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,16 +1,27 @@
 @use './colors.scss' as *;
 
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
   box-sizing: border-box;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: auto;
+  @media screen and (max-width: 600px) {
+    margin: auto;
+  } 
+}
+
+p {
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 body {
-  padding: 0;
-  margin: 0 20px;
+  padding: 10;
+  margin: 20 20px;
   font-family: 'Montserrat', 'Quicksand', sans-serif;
   color: white;
   background: black;
@@ -40,28 +51,10 @@ a {
   font-weight: 400;
 }
 
- img {
-  border-top: 10px solid black;
-  border-bottom: 5px solid black;
+img {
+  border-top: 20px solid black;
+  border-bottom: 20px solid black;
   border-left: 20px solid black;
   border-right: 20px solid black;
   border-radius: 50px;
 }
-
-/* @media (prefers-color-scheme: light) {
-  body {
-    color: black;
-    background: white;
-  }
-  a {
-    color: yellow;
-    -webkit-filter: drop-shadow(1px 1px 0.3px rgba(59, 59, 59, 0.5));
-    filter: drop-shadow(1px 1px 0.3px rgba(59, 59, 59, 0.5));
-
-    &:hover {
-      color: lightblue;
-      -webkit-filter: drop-shadow(1px 1px 0.3px rgba(59, 59, 59, 0.5));
-      filter: drop-shadow(1px 1px 0.3px rgba(59, 59, 59, 0.5));
-    }
-  }
-} */
